resume/job updates

--- a/theme/templates/resume.html
+++ b/theme/templates/resume.html
@@ -133,12 +133,12 @@ ul.leaders li.title-item:before {
     <div>
       <h1>Adam C. F. Cox</h1>
       <div>MLIS, MS Geography</div>
-      <div>GIS Developer</div>
+      <div>Geospatial Developer</div>
     </div>
     <div style="display:flex; flex-direction: column; text-align: right;">
       <div>mr.adamcox@gmail.com</div>
       <div>mradamcox.github.io</div>
-      <span style="font-style:italic; font-size: .95em;">February 2023</span>
+      <span style="font-style:italic; font-size: .95em;">August 2023</span>
     </div>
      </div>
     <!-- <div class="statement">
@@ -155,9 +155,9 @@ ul.leaders li.title-item:before {
                   <ul class="key-skills-list">
                       <li>Problem-solving</li>
                       <li>Self-guided learning</li>
-                      <li>GIS data management</li>
                       <li>Geospatial programming</li>
-                      <li>Cartography</li>
+                      <li>Data pipelines & ETL</li>
+                      <li>GDAL & rasters</li>
                   </ul>
               </div>
           </div>
@@ -167,8 +167,8 @@ ul.leaders li.title-item:before {
               </div>
               <div class="section-content">
                   <ul class="key-skills-list">
-                      <li>Geopatial data infrastructure</li>
                       <li>Open source software</li>
+                      <li>Geopatial data infrastructure</li>
                       <li>Historical maps and archives</li>
                       <li>Facilitating public access to public data</li>
                   </ul>
@@ -180,10 +180,11 @@ ul.leaders li.title-item:before {
             </div>
             <div class="section-content">
                 <ul class="key-skills-list">
+                    <li>IIIF-Maps group</li>
+                    <li>GeoBlacklight</li>
                     <li>Arches Q/A Forum</li>
                     <li>The Spatial Community Slack workspace</li>
                     <li>NACIS member</li>
-                    <li>GeoForAll-LSU co-founder</li>
                 </ul>
             </div>
         </div>
@@ -195,18 +196,23 @@ ul.leaders li.title-item:before {
           </div>
           <div class="section-content">
             <ul class="leaders" style="margin-bottom: 5px;">
-                <li class="title-item"><span>Louisiana State University &ndash; Graduate Student</span><span>2019 - 2022</span></li>
-                <li class="subitem arrow">Designed, created, and implemented a crowdsourcing platform for georeferencing Sanborn Maps in the Library of Congress digital collection: oldinsurancemaps.net</li>
-                <li class="subitem arrow">Researched and wrote papers on LIS topics: participatory archives, RDA, fair use/copyright</li>
-                <li class="subitem arrow">Provided geospatial data support for Coastal Sustainability Studio</li>
+                <li class="title-item"><span>Healthy Regions & Policies Lab (UI Urbana-Champaign) &ndash; DevOps Engineer</span><span>2023&ndash;present</span></li>
+                <li class="subitem arrow">Web admin and development operations for public health data projects, e.g. US Covid Atlas (uscovidatlas.org), Opioid Environment Policy Scan (oeps.healthyregions.org)</li>
+                <li class="subitem arrow">Manage multiple GitHub repositories, plus AWS, Google BigQuery, and Mapbox accounts</li>
+                <li class="subitem arrow">Provide students and interns with technical guidance and spatial data support</li>
+            </ul>
+            <ul class="leaders" style="margin-bottom: 5px;">
+                <li class="title-item"><span>OldInsuranceMaps.net &ndash; Creator / Software Developer</span><span>2019 - present</span></li>
+                <li class="subitem arrow">Designed, created, and implemented collaborative georeferencing platform for LOC Sanborn Maps; master thesis &rarr; ongoing independent project</li>
+                <li class="subitem arrow">2,000+ georeferenced layers, 300+ volumes from 150+ cities/towns, 100+ contributors</li>
+                <li class="subitem arrow"><strong>Sponsors</strong> U. of Michigan <strong>Partners</strong> U. of Richmond DSL, OpenHistoricalMap, HistoryForge</li>
             </ul>
             <ul class="leaders" style="margin-bottom: 5px;">
                 <li class="title-item"><span>Legion GIS &ndash; Owner / Geospatial Developer</span><span>2016 - present</span></li>
-                <li class="subitem arrow">40+ projects for 20+ clients &ndash; from small non-profits to governmental and academic institutions in the U.S. and abroad</li>
+                <li class="subitem arrow">40+ projects for 20+ clients, in U.S. and abroad (both public and private sector)
                 <li class="subitem arrow">Planned and carried out 15+ Arches cultural heritage inventory implementations &ndash; ETL support, create custom extensions, e.g. Heritage Monitoring Scouts &ndash; hms.fpan.us</li>
-                <li class="subitem arrow">Managing multiple Linux servers to host GIS web applications and spatial layers &ndash; AWS, Linode, Geoserver, Titiler</li>
-                <li class="subitem arrow">Maintaining and contributing to Arches documentation &ndash; arches.readthedocs.io</li>
-                <li class="subitem arrow">Creating cartographic products from client-supplied GIS data &ndash; hazard mitigation planning; food networks, recreational trail maps</li>
+                <li class="subitem arrow">Managed multiple Linux servers to host GIS web applications and spatial layers</li>
+                <li class="subitem arrow">Core contributor to (and maintainer or) Arches documentation &ndash; arches.readthedocs.io</li>
             </ul>
             <ul class="leaders">
                 <li class="title-item"><span>National Park Service &ndash; GIS Specialist</span><span>2012 - 2015</span></li>
@@ -243,16 +249,16 @@ ul.leaders li.title-item:before {
         </div>
         <div class="section-content conference-section">
           <ul class=leaders>
-            <li class="title-item"><span>Geo4LibCamp &ndash; 2022 &ndash; online</span><span>Presenter</span></li>
-            <li class="subitem">Creating a Public Space for Georeferencing Sanborn Maps</li>
+            <li class="title-item"><span>State of the Map US &ndash; 2023 &ndash; Richmond, Va.</span><span>Co-presenter</span></li>
+            <li class="subitem">Mapping Turn of the Century Richmond with OldInsuranceMaps.net & OHM</li>
+            <li class="title-item"><span>NACIS &ndash; 2022 &ndash; Minneapolis, MN.</span><span>Presenter</span></li>
+            <li class="subitem">Crowdsourced Georeferencing Sanborn Maps of Louisiana</li>
             <li class="title-item"><span>NACIS &ndash; 2021 &ndash; Oklahoma City, Okla.</span><span>Presenter</span></li>
             <li class="subitem">Creating a Public Space for Georeferencing Sanborn Maps</li>
             <li class="title-item"><span>GeoNode Summit &ndash; 2020 &ndash; online</span><span>Presenter</span></li>
             <li class="subitem">Extending GeoNode to Support Historical Map Georeferencing</li>
             <li class="title-item"><span>QGIS North America &ndash; 2020 &ndash; online</span><span>Presenter</span></li>
             <li class="subitem">QGIS and GIMP for Enhancing Historical Maps</li>
-            <li class="title-item"><span>CA Pres. Conference &ndash; 2019 &ndash; Palm Springs, Calif.</span><span>Co-presenter</span></li>
-            <li class="subitem">Designing an Arches Database</li>
             <li class="title-item"><span>AAG Annual Meeting &ndash; 2019 &ndash; Washington, D.C.</span><span>Attendee</span></li>
             <li class="title-item"><span>AAG Annual Meeting &ndash; 2018 &ndash; New Orleans, La.</span><span>Attendee</span></li>
             <li class="title-item"><span>Liverpool John Moores University &ndash; 2017 &ndash; Liverpool, U.K.</span><span>Tech Support</span></li>
@@ -272,7 +278,7 @@ ul.leaders li.title-item:before {
             <div class="tech-skills-subheader">Geospatial Software</div>
             <div class="subitem">
                 <div>
-                    QGIS &middot; ArcMap &middot; PostGIS &middot; Geoserver &middot; GeoNode &middot; GRASS &middot; ENVI &middot; ArcGIS Pro &middot; AGOL &middot; Titiler &middot; MapServer
+                    QGIS &middot; PostGIS &middot; Geoserver &middot; GeoNode &middot; GRASS &middot; ENVI &middot; ArcGIS Pro/ArcMap &middot; AGOL &middot; TiTiler &middot; MapServer
                 </div>
             </div>
             <div class="tech-skills-subheader">Programming</div>
@@ -290,13 +296,13 @@ ul.leaders li.title-item:before {
             <div class="tech-skills-subheader">Design + Information Systems</div>
             <div class="subitem">
                 <div>
-                    GIMP &middot; Inkscape &middot; MS Office &middot; Zotero &middot; Adode CS &middot; Tableau &middot; Archives Space
+                    GeoBlacklight &middot; GIMP &middot; Inkscape &middot; Zotero &middot; Adode CS &middot; Tableau &middot; Archives Space
                 </div>
             </div>
             <div class="tech-skills-subheader">Standards + Specs</div>
             <div class="subitem">
                 <div>
-                    SHP &middot; Geodatabase &middot; Geopackage &middot; GeoTiff &middot; LAS &middot; GeoJSON &middot; WMS/WMTS &middot; ArcGIS Feature Service &middot; IIIF &middot; STAC
+                    JSON/GeoJSON &middot; GeoTiff/COG &middot; LAS &middot; WMS/WMTS &middot; IIIF &middot; STAC
                 </div>
             </div>     
         </div>
