improve resume style for printing

--- a/theme/templates/resume.html
+++ b/theme/templates/resume.html
@@ -7,8 +7,8 @@
    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg==" crossorigin="anonymous"></script>
 <style>
    #resume-container {
-    width: 680px;
-    padding: 70px;     /* ~.75in margin */
+    /* width: 680px; */
+    /* padding: 70px;     ~.75in margin */
     background:white;
     display: flex;
     flex-direction: column;
@@ -86,6 +86,17 @@ ul.leaders li.title-item:before {
 "\00B7\0020\0020\00B7\0020\0020\00B7\0020\0020\00B7\0020\0020\00B7\0020\0020\00B7\0020\0020\00B7\0020\0020\00B7\0020\0020"
 "\00B7\0020\0020\00B7\0020\0020\00B7\0020\0020\00B7\0020\0020\00B7\0020\0020\00B7\0020\0020\00B7\0020\0020\00B7\0020\0020"
 "\00B7\0020\0020\00B7\0020\0020\00B7\0020\0020\00B7\0020\0020\00B7\0020\0020\00B7\0020\0020\00B7\0020\0020\00B7\0020\0020"
+"\00B7\0020\0020\00B7\0020\0020\00B7\0020\0020\00B7\0020\0020\00B7\0020\0020\00B7\0020\0020\00B7\0020\0020\00B7\0020\0020"
+"\00B7\0020\0020\00B7\0020\0020\00B7\0020\0020\00B7\0020\0020\00B7\0020\0020\00B7\0020\0020\00B7\0020\0020\00B7\0020\0020"
+"\00B7\0020\0020\00B7\0020\0020\00B7\0020\0020\00B7\0020\0020\00B7\0020\0020\00B7\0020\0020\00B7\0020\0020\00B7\0020\0020"
+"\00B7\0020\0020\00B7\0020\0020\00B7\0020\0020\00B7\0020\0020\00B7\0020\0020\00B7\0020\0020\00B7\0020\0020\00B7\0020\0020"
+"\00B7\0020\0020\00B7\0020\0020\00B7\0020\0020\00B7\0020\0020\00B7\0020\0020\00B7\0020\0020\00B7\0020\0020\00B7\0020\0020"
+"\00B7\0020\0020\00B7\0020\0020\00B7\0020\0020\00B7\0020\0020\00B7\0020\0020\00B7\0020\0020\00B7\0020\0020\00B7\0020\0020"
+"\00B7\0020\0020\00B7\0020\0020\00B7\0020\0020\00B7\0020\0020\00B7\0020\0020\00B7\0020\0020\00B7\0020\0020\00B7\0020\0020"
+"\00B7\0020\0020\00B7\0020\0020\00B7\0020\0020\00B7\0020\0020\00B7\0020\0020\00B7\0020\0020\00B7\0020\0020\00B7\0020\0020"
+"\00B7\0020\0020\00B7\0020\0020\00B7\0020\0020\00B7\0020\0020\00B7\0020\0020\00B7\0020\0020\00B7\0020\0020\00B7\0020\0020"
+"\00B7\0020\0020\00B7\0020\0020\00B7\0020\0020\00B7\0020\0020\00B7\0020\0020\00B7\0020\0020\00B7\0020\0020\00B7\0020\0020"
+"\00B7\0020\0020\00B7\0020\0020\00B7\0020\0020\00B7\0020\0020\00B7\0020\0020\00B7\0020\0020\00B7\0020\0020\00B7\0020\0020"
   }
   ul.leaders span:first-child {
     padding-right: 0.33em;
@@ -138,14 +149,14 @@ ul.leaders li.title-item:before {
     <div style="display:flex; flex-direction: column; text-align: right;">
       <div>mr.adamcox@gmail.com</div>
       <div>mradamcox.github.io</div>
-      <span style="font-style:italic; font-size: .95em;">August 2023</span>
+      <span style="font-style:italic; font-size: .95em;">July 2024</span>
     </div>
      </div>
     <!-- <div class="statement">
         I have worked in the geospatial realm for ten years, primarily as an independent consultant in a wide variety of contexts. Now I plan to bring my experience to a career in geospatial librarianship.
     </div> -->
     
-    <div class="section-row" style="">
+    <div class="section-row">
       <div style="display:flex; flex-direction: column; width: 300px;">
           <div class="section">
               <div class="section-header">
@@ -189,39 +200,7 @@ ul.leaders li.title-item:before {
             </div>
         </div>
       </div>
-      <div style="display:flex; flex-direction: column; padding-left: 15px;">
-        <div class="section">
-          <div class="section-header">
-            Relevant Experience
-          </div>
-          <div class="section-content">
-            <ul class="leaders" style="margin-bottom: 5px;">
-                <li class="title-item"><span>Healthy Regions & Policies Lab (UI Urbana-Champaign) &ndash; DevOps Engineer</span><span>2023&ndash;present</span></li>
-                <li class="subitem arrow">Web admin and development operations for public health data projects, e.g. US Covid Atlas (uscovidatlas.org), Opioid Environment Policy Scan (oeps.healthyregions.org)</li>
-                <li class="subitem arrow">Manage multiple GitHub repositories, plus AWS, Google BigQuery, and Mapbox accounts</li>
-                <li class="subitem arrow">Provide students and interns with technical guidance and spatial data support</li>
-            </ul>
-            <ul class="leaders" style="margin-bottom: 5px;">
-                <li class="title-item"><span>OldInsuranceMaps.net &ndash; Creator / Software Developer</span><span>2019 - present</span></li>
-                <li class="subitem arrow">Designed, created, and implemented collaborative georeferencing platform for LOC Sanborn Maps; master thesis &rarr; ongoing independent project</li>
-                <li class="subitem arrow">2,000+ georeferenced layers, 300+ volumes from 150+ cities/towns, 100+ contributors</li>
-                <li class="subitem arrow"><strong>Sponsors</strong> U. of Michigan <strong>Partners</strong> U. of Richmond DSL, OpenHistoricalMap, HistoryForge</li>
-            </ul>
-            <ul class="leaders" style="margin-bottom: 5px;">
-                <li class="title-item"><span>Legion GIS &ndash; Owner / Geospatial Developer</span><span>2016 - present</span></li>
-                <li class="subitem arrow">40+ projects for 20+ clients, in U.S. and abroad (both public and private sector)
-                <li class="subitem arrow">Planned and carried out 15+ Arches cultural heritage inventory implementations &ndash; ETL support, create custom extensions, e.g. Heritage Monitoring Scouts &ndash; hms.fpan.us</li>
-                <li class="subitem arrow">Managed multiple Linux servers to host GIS web applications and spatial layers</li>
-                <li class="subitem arrow">Core contributor to (and maintainer or) Arches documentation &ndash; arches.readthedocs.io</li>
-            </ul>
-            <ul class="leaders">
-                <li class="title-item"><span>National Park Service &ndash; GIS Specialist</span><span>2012 - 2015</span></li>
-                <li class="subitem arrow">Created spatial database for NPS Cultural Landscape Inventory (CLI) program</li>
-                <li class="subitem arrow">Implemented spatial data transfer-standards, feature-level metadata</li>
-                <li class="subitem arrow">Designed, built, and published ArcGIS Python toolbox with 30+ tools to support use of CLI spatial database</li>
-            </ul>
-          </div>
-        </div>
+      <div style="display:flex; flex-direction: column; padding-left: 15px; flex-grow:1;">
         <div class="section" style="width: 100%">
           <div class="section-header">
               Education
@@ -233,6 +212,45 @@ ul.leaders li.title-item:before {
             </ul>
             <ul class="leaders">
               <li class="title-item"><span>BA Anthropology</strong> &ndash; Lawrence University, Appleton, Wis. &ndash; Phi Beta Kappa</span><span>2011</span></li>
+            </ul>
+          </div>
+        </div>
+        <div class="section">
+          <div class="section-header">
+            Relevant Experience
+          </div>
+          <div class="section-content">
+            <ul class="leaders" style="margin-bottom: 5px;">
+              <li class="title-item"><span>Healthy Regions & Policies Lab (UI Urbana-Champaign) &ndash; Sr Research Software Engineer</span><span>2023&ndash;present</span></li>
+              <li class="subitem arrow">Web admin and engineer for public health data projects, e.g. US Covid Atlas (uscovidatlas.org), Opioid Environment Policy Scan (oeps.healthyregions.org)</li>
+              <li class="subitem arrow">Manage multiple GitHub repositories, plus AWS, Google BigQuery, and Mapbox accounts</li>
+              <li class="subitem arrow">Provide students and interns with technical guidance and spatial data support</li>
+            </ul>
+            <ul class="leaders" style="margin-bottom: 5px;">
+              <li class="title-item"><span>Legion GIS &ndash; Owner / Geospatial Developer</span><span>2016 - present</span></li>
+              <li class="subitem arrow">40+ GIS projects for 20+ clients, in U.S. and abroad (both public and private sector)
+              <li class="subitem arrow">Planned and carried out 15+ Arches cultural heritage inventory implementations &ndash; ETL support, create custom extensions, e.g. Heritage Monitoring Scouts &ndash; hms.fpan.us</li>
+              <li class="subitem arrow">Managed multiple Linux servers to host GIS web applications and spatial layers</li>
+              <li class="subitem arrow">Core contributor to (and maintainer or) Arches documentation &ndash; arches.readthedocs.io</li>
+            </ul>
+            <ul class="leaders">
+              <li class="title-item"><span>National Park Service &ndash; GIS Specialist</span><span>2012 - 2015</span></li>
+              <li class="subitem arrow">Created spatial database for NPS Cultural Landscape Inventory (CLI) program</li>
+              <li class="subitem arrow">Implemented spatial data transfer-standards, feature-level metadata</li>
+              <li class="subitem arrow">Designed, built, and published ArcGIS Python toolbox with 30+ tools to support use of CLI spatial database</li>
+            </ul>
+          </div>
+        </div>
+        <div class="section">
+          <div class="section-header">
+            Projects
+          </div>
+          <div class="section-content">
+            <ul class="leaders" style="margin-bottom: 5px;">
+              <li class="title-item"><span>OldInsuranceMaps.net &ndash; Creator / Software Developer</span><span>2019 - present</span></li>
+              <li class="subitem arrow">Designed, created, and implemented collaborative georeferencing platform for LOC Sanborn Maps; master thesis &rarr; ongoing independent project</li>
+              <li class="subitem arrow">2,000+ georeferenced layers, 300+ volumes from 150+ cities/towns, 100+ contributors</li>
+              <li class="subitem arrow"><strong>Sponsors</strong> U. of Michigan <strong>Partners</strong> U. of Richmond DSL, OpenHistoricalMap, HistoryForge</li>
             </ul>
           </div>
         </div>
