--- a/theme/templates/resume.html
+++ b/theme/templates/resume.html
@@ -1,10 +1,9 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-   <title></title>
+   <title>Adam Cox</title>
    <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300,500&display=swap" rel="stylesheet"> 
-   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg==" crossorigin="anonymous"></script>
 <style>
    #resume-container {
     /* width: 680px; */
