--- a/theme/templates/resume.html
+++ b/theme/templates/resume.html
@@ -108,7 +108,7 @@ ul.leaders li.title-item:before {
   }
   ul.leaders li.subitem {
     margin-left: 15px;
-    font-style: italic;
+    /* font-style: italic; */
   }
   li.subitem.arrow::marker {
     content: "\2192\0020\0020";
@@ -143,12 +143,12 @@ ul.leaders li.title-item:before {
     <div>
       <h1>Adam C. F. Cox</h1>
       <div>MLIS, MS Geography</div>
-      <div>Geospatial Developer</div>
+      <div>Geospatial & Web Developer</div>
     </div>
     <div style="display:flex; flex-direction: column; text-align: right;">
       <div>mr.adamcox@gmail.com</div>
       <div>mradamcox.github.io</div>
-      <span style="font-style:italic; font-size: .95em;">July 2024</span>
+      <span style="font-style:italic; font-size: .95em;">March 2025</span>
     </div>
      </div>
     <!-- <div class="statement">
@@ -165,9 +165,9 @@ ul.leaders li.title-item:before {
                   <ul class="key-skills-list">
                       <li>Problem-solving</li>
                       <li>Self-guided learning</li>
-                      <li>Geospatial programming</li>
+                      <li>Communication + documentation</li>
+                      <li>Full-stack programming</li>
                       <li>Data pipelines & ETL</li>
-                      <li>GDAL & rasters</li>
                   </ul>
               </div>
           </div>
@@ -180,7 +180,8 @@ ul.leaders li.title-item:before {
                       <li>Open source software</li>
                       <li>Geopatial data infrastructure</li>
                       <li>Historical maps and archives</li>
-                      <li>Facilitating public access to public data</li>
+                      <li>Cultural heritage crowdsourcing</li>
+                      <li>Improving access to public data</li>
                   </ul>
               </div>
           </div>
@@ -192,9 +193,10 @@ ul.leaders li.title-item:before {
                 <ul class="key-skills-list">
                     <li>IIIF-Maps group</li>
                     <li>GeoBlacklight</li>
-                    <li>Arches Q/A Forum</li>
-                    <li>The Spatial Community Slack workspace</li>
-                    <li>NACIS member</li>
+                    <li>Arches Forum</li>
+                    <li>The Spatial Community (Slack)</li>
+                    <li>NACIS (member)</li>
+                    <li>Front-end Party (local web dev group)</li>
                 </ul>
             </div>
         </div>
@@ -220,8 +222,8 @@ ul.leaders li.title-item:before {
           </div>
           <div class="section-content">
             <ul class="leaders" style="margin-bottom: 5px;">
-              <li class="title-item"><span>Healthy Regions & Policies Lab (UI Urbana-Champaign) &ndash; Sr Research Software Engineer</span><span>2023&ndash;present</span></li>
-              <li class="subitem arrow">Web admin and engineer for public health data projects, e.g. US Covid Atlas (uscovidatlas.org), Opioid Environment Policy Scan (oeps.healthyregions.org)</li>
+              <li class="title-item"><span>Healthy Regions & Policies Lab, UIUC &ndash; Sr Research Software Engineer</span><span>2023&ndash;present</span></li>
+              <li class="subitem arrow">Web admin/engineer for public health data projects, e.g. SDOH & Place Project (sdohplace.org), Opioid Environment Policy Scan (oeps.healthyregions.org)</li>
               <li class="subitem arrow">Manage multiple GitHub repositories, plus AWS, Google BigQuery, and Mapbox accounts</li>
               <li class="subitem arrow">Provide students and interns with technical guidance and spatial data support</li>
             </ul>
@@ -230,13 +232,13 @@ ul.leaders li.title-item:before {
               <li class="subitem arrow">40+ GIS projects for 20+ clients, in U.S. and abroad (both public and private sector)
               <li class="subitem arrow">Planned and carried out 15+ Arches cultural heritage inventory implementations &ndash; ETL support, create custom extensions, e.g. Heritage Monitoring Scouts &ndash; hms.fpan.us</li>
               <li class="subitem arrow">Managed multiple Linux servers to host GIS web applications and spatial layers</li>
-              <li class="subitem arrow">Core contributor to (and maintainer or) Arches documentation &ndash; arches.readthedocs.io</li>
+              <li class="subitem arrow">Core contributor and maintainer for Arches documentation &ndash; arches.readthedocs.io</li>
             </ul>
             <ul class="leaders">
               <li class="title-item"><span>National Park Service &ndash; GIS Specialist</span><span>2012 - 2015</span></li>
               <li class="subitem arrow">Created spatial database for NPS Cultural Landscape Inventory (CLI) program</li>
               <li class="subitem arrow">Implemented spatial data transfer-standards, feature-level metadata</li>
-              <li class="subitem arrow">Designed, built, and published ArcGIS Python toolbox with 30+ tools to support use of CLI spatial database</li>
+              <li class="subitem arrow">Designed and wrote ArcGIS Python toolbox, 30+ tools for Cultural Landscape Inventory</li>
             </ul>
           </div>
         </div>
@@ -248,42 +250,42 @@ ul.leaders li.title-item:before {
             <ul class="leaders" style="margin-bottom: 5px;">
               <li class="title-item"><span>OldInsuranceMaps.net &ndash; Creator / Software Developer</span><span>2019 - present</span></li>
               <li class="subitem arrow">Designed, created, and implemented collaborative georeferencing platform for LOC Sanborn Maps; master thesis &rarr; ongoing independent project</li>
-              <li class="subitem arrow">2,000+ georeferenced layers, 300+ volumes from 150+ cities/towns, 100+ contributors</li>
-              <li class="subitem arrow"><strong>Sponsors</strong> U. of Michigan <strong>Partners</strong> U. of Richmond DSL, OpenHistoricalMap, HistoryForge</li>
+              <li class="subitem arrow">35,000+ crowdsourced georeferenced layers, 600+ volumes from 300+ cities/towns, 300+ contributors</li>
+              <li class="subitem arrow">Facilitated several community "georeference-a-thons" for public engagement</li>
+              <li class="subitem arrow"><strong>Collaborators</strong> U. of Michigan, U. of Richmond Digital Scholarship Lab, Morgan State U., OpenHistoricalMap, HistoryForge, OSU Libaries, Rowan U, UGA Community Mapping Lab</li>
             </ul>
           </div>
         </div>
       </div>
     </div>
     <div class="section-row">
-        
-    </div>
-    <div class="section-row">
-        
       <div style="padding-right: 15px; flex-grow: 1;">
         <div class="section-header">
-          Conferences / Workshops
+          Selected Conferences / Workshops
         </div>
         <div class="section-content conference-section">
           <ul class=leaders>
+            <li class="title-item"><span>GIS Day @ HeRoP Lab &ndash; 2024 &ndash; University of Illinois, Ill.</span><span>Facilitator</span></li>
+            <li class="subitem">Community georeferencing events with Morgan State & UChicago</li>
+            <li class="title-item"><span>NACIS &ndash; 2024 &ndash; Tacoma, Wash.</span><span>Presenter</span></li>
+            <li class="subitem">Handling Complex Content within Georeferenced Historical Atlases</li>
             <li class="title-item"><span>State of the Map US &ndash; 2023 &ndash; Richmond, Va.</span><span>Co-presenter</span></li>
             <li class="subitem">Mapping Turn of the Century Richmond with OldInsuranceMaps.net & OHM</li>
-            <li class="title-item"><span>NACIS &ndash; 2022 &ndash; Minneapolis, MN.</span><span>Presenter</span></li>
-            <li class="subitem">Crowdsourced Georeferencing Sanborn Maps of Louisiana</li>
+            <!-- <li class="title-item"><span>NACIS &ndash; 2022 &ndash; Minneapolis, Minn.</span><span>Presenter</span></li>
+            <li class="subitem">Crowdsourced Georeferencing Sanborn Maps of Louisiana</li> -->
             <li class="title-item"><span>NACIS &ndash; 2021 &ndash; Oklahoma City, Okla.</span><span>Presenter</span></li>
             <li class="subitem">Creating a Public Space for Georeferencing Sanborn Maps</li>
             <li class="title-item"><span>GeoNode Summit &ndash; 2020 &ndash; online</span><span>Presenter</span></li>
             <li class="subitem">Extending GeoNode to Support Historical Map Georeferencing</li>
             <li class="title-item"><span>QGIS North America &ndash; 2020 &ndash; online</span><span>Presenter</span></li>
             <li class="subitem">QGIS and GIMP for Enhancing Historical Maps</li>
-            <li class="title-item"><span>AAG Annual Meeting &ndash; 2019 &ndash; Washington, D.C.</span><span>Attendee</span></li>
-            <li class="title-item"><span>AAG Annual Meeting &ndash; 2018 &ndash; New Orleans, La.</span><span>Attendee</span></li>
+            <li class="title-item"><span>AAG Annual Meeting &ndash; 2019 (Washington, D.C.) &ndash; 2018 (New Orleans, La.) </span><span>Attendee</span></li>
             <li class="title-item"><span>Liverpool John Moores University &ndash; 2017 &ndash; Liverpool, U.K.</span><span>Tech Support</span></li>
             <li class="subitem">Arches Training and Workshop</li>
-            <li class="title-item"><span>FOSS4G International Conference &ndash; 2017 &ndash; Boston</span><span>Attendee</span></li>
+            <!-- <li class="title-item"><span>FOSS4G International Conference &ndash; 2017 &ndash; Boston</span><span>Attendee</span></li> -->
             <li class="title-item"><span>Louisiana Studies Conference &ndash; 2013 &ndash; Natchitoches, La.</span><span>Presenter</span></li>
             <li class="subitem">Mapping the American Cemetery: Using GIS in Historic Preservation</li>
-            <li class="title-item"><span>ESRI User Conference &ndash; 2013 &ndash; San Diego, Calif.</span><span>Attendee</span></li>
+            <!-- <li class="title-item"><span>ESRI User Conference &ndash; 2013 &ndash; San Diego, Calif.</span><span>Attendee</span></li> -->
           </ul>
         </div>
       </div>
@@ -292,28 +294,28 @@ ul.leaders li.title-item:before {
           Technical Capabilities
         </div>
         <div class="section-content">
+            <div class="tech-skills-subheader">Front-end Web Development</div>
+            <div class="subitem">
+                <div>
+                  JavaScipt &middot; Svelte &middot; NextJS/React &middot; MapLibreJS &middot; OpenLayers &middot; Leaflet &middot; HTML &middot; CSS
+                </div>
+            </div>
+            <div class="tech-skills-subheader">Back-end + Systems</div>
+            <div class="subitem">
+                <div>
+                  Python &middot; Django &middot; PostgreSQL &middot; GDAL &middot; git + Github &middot; Linux &middot; bash &middot; AWS &middot; Linode &middot; GeoBlacklight &middot; Solr
+                </div>
+            </div>
             <div class="tech-skills-subheader">Geospatial Software</div>
             <div class="subitem">
                 <div>
-                    QGIS &middot; PostGIS &middot; Geoserver &middot; GeoNode &middot; GRASS &middot; ENVI &middot; ArcGIS Pro/ArcMap &middot; AGOL &middot; TiTiler &middot; MapServer
+                    QGIS &middot; PostGIS &middot; Geoserver &middot; TiTiler &middot; GRASS &middot; ENVI
                 </div>
             </div>
-            <div class="tech-skills-subheader">Programming</div>
+            <div class="tech-skills-subheader">General Software</div>
             <div class="subitem">
                 <div>
-                    Python &middot; GDAL &middot; git &middot; Github &middot; Linux &middot; VSCode &middot; AWS &middot; Linode
-                </div>
-            </div>
-            <div class="tech-skills-subheader">Web Development</div>
-            <div class="subitem">
-                <div>
-                    Django &middot; OpenLayers &middot; Leaflet &middot; HTML &middot; CSS &middot; JavaScript &middot; Svelte
-                </div>
-            </div>       
-            <div class="tech-skills-subheader">Design + Information Systems</div>
-            <div class="subitem">
-                <div>
-                    GeoBlacklight &middot; GIMP &middot; Inkscape &middot; Zotero &middot; Adode CS &middot; Tableau &middot; Archives Space
+                     GIMP &middot; Inkscape &middot; Zotero &middot; Adode CS &middot; Tableau &middot; Archives Space
                 </div>
             </div>
             <div class="tech-skills-subheader">Standards + Specs</div>
@@ -321,7 +323,7 @@ ul.leaders li.title-item:before {
                 <div>
                     JSON/GeoJSON &middot; GeoTiff/COG &middot; LAS &middot; WMS/WMTS &middot; IIIF &middot; STAC
                 </div>
-            </div>     
+            </div>
         </div>
       </div>
     </div>
